--- a/src/content/index.html
+++ b/src/content/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class="whiteSection">
             <header class="header">
-                <img src="assets/img/photo.png" class="header__photo" alt="Damian Sikora"></img>
+                <img src="assets/img/photo.png" class="header__photo" alt="Damian Sikora" />
                 <h1 class="header__title">
                     Welcome👋 My name is Damian Sikora and I'm a mobile developer. I'm a husband and a father. I'm interested in video games and IoT stuff.
                 </h1>
@@ -98,11 +98,11 @@
                 I'm open for new projects. If you have one for me - we should talk!
             </p>
 
-            <section class="contact__list ">
+            <div class="contact__list ">
                 <a href="https://github.com/damiansikora85/" class="contact__listItem ">
                     <img src="../assets/img/githubIconWhite.svg" alt="github" />
                 </a>
-            </section>
+            </div>
 
             <a class="contact__email " href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
         </footer>
